--- a/main/templates/show_item.html
+++ b/main/templates/show_item.html
@@ -2,7 +2,7 @@
 {% block content %}
 <p><a href="{% url 'main:show_main' %}"><button>← Back to Item List</button></a></p>
 
-<h2><a href = "{% url 'main:show_item' item.id}">{{ item.name }}</a></h2>
+<h2><a>{{ item.name }}</a></h2>
 <p><b>Price: {{ item.price }}</b></p>
 
 <p><b>{{ item.get_category_display }}</b>{% if item.is_featured %} | 
