--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -9,7 +9,9 @@
 <a href = "{% url 'main:create_item' %}""> 
     <button> + Add Item </button>
 </a>
-
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
 <hr>
 
 {%if not item_list%}
