--- a/main/templates/show_item.html
+++ b/main/templates/show_item.html
@@ -3,6 +3,7 @@
 <p><a href="{% url 'main:show_main' %}"><button>← Back to Item List</button></a></p>
 
 <h2><a>{{ item.name }}</a></h2>
+<p>Stock: {{ item.stock }}</p>
 <p><b>Price: {{ item.price }}</b></p>
 
 <p><b>{{ item.get_category_display }}</b>{% if item.is_featured %} | 
@@ -15,5 +16,7 @@
 {% endif %}
 
 <p>{{ item.description }}</p>
+
+<p>Seller: {{ item.user }}</p>
 
 {% endblock content %}
