--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -12,7 +12,14 @@
 <a href="{% url 'main:logout' %}">
   <button>Logout</button>
 </a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 <hr>
+<a href="?filter=all">
+    <button type="button">All Items</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Items</button>
+</a> 
 
 {%if not item_list%}
 <p> Belum ada item yang dijual. </p>
