styling with css, making navbar

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% include 'navbar.html' %}
 <h1>Welcome, {{ user }} to spuD's Shop!</h1>
 
 <p>Nama : {{ nama }}</p>
