--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
 <nav class="fixed top-0 left-0 w-full bg-linear-to-b from-[#7c5295] via-[#000000] to-[#d71515]">
+  <div class="bg-white/5 backdrop-blur-md rounded-lg border border-white/20 form-style">
     <div class="max-w-7xl mx-auto px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
@@ -87,6 +88,7 @@
         </div>
       </div>
     </div>
+  </div>
     <script>
       const btn = document.querySelector("button.mobile-menu-button");
       const menu = document.querySelector(".mobile-menu");
